# Celery_Chatroom

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
compose/: Dockerfile
src/: db.sqlite3  manage.py
src/chat/: consumers.py  forms.py  tasks.py  views.py
src/chat/templates/chat/: index.html  room.html
src/project_chatroom/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
