[project]
name = "chatroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.8",
    "google-api-python-client>=2.187.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "redis>=7.1.0",
]
